--- a/Exercícios/ex.022/fundo006.html
+++ b/Exercícios/ex.022/fundo006.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo De Tela</title>
     <style>
         body{
+            /*
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            ou
+
+            Shorthand - background
+                color > image > position > repeat > [size] > attatchment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +38,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor qui ad necessitatibus illo distinctio illum recusandae placeat iste est provident dolorum neque nihil doloribus earum, expedita incidunt temporibus similique quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea. Dolore eos ullam necessitatibus impedit officiis accusantium, iusto rerum, consequuntur nobis excepturi perferendis cupiditate asperiores iste mollitia repellendus. Consequatur, mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem officiis a ipsa, hic, minus, officia eligendi aspernatur voluptates corporis sed fuga sit doloremque nihil consequuntur? Reiciendis animi consectetur qui.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor qui ad necessitatibus illo distinctio illum recusandae placeat iste est provident dolorum neque nihil doloribus earum, expedita incidunt temporibus similique quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea. Dolore eos ullam necessitatibus impedit officiis accusantium, iusto rerum, consequuntur nobis excepturi perferendis cupiditate asperiores iste mollitia repellendus. Consequatur, mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem officiis a ipsa, hic, minus, officia eligendi aspernatur voluptates corporis sed fuga sit doloremque nihil consequuntur? Reiciendis animi consectetur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, adipisci voluptatum, ullam, odit velit tenetur quas deserunt laboriosam labore corrupti dignissimos officiis natus? Quas incidunt itaque iusto deserunt fugit placeat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ullam necessitatibus consectetur, dicta blanditiis earum ut assumenda aut. Labore aliquid delectus dolor laborum quae velit temporibus iste alias vel ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cupiditate doloremque magni laboriosam, harum maxime et nulla voluptatem? Rerum, corrupti velit laudantium quidem fugit omnis ratione tempora corporis repellat cum.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor qui ad necessitatibus illo distinctio illum recusandae placeat iste est provident dolorum neque nihil doloribus earum, expedita incidunt temporibus similique quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea. Dolore eos ullam necessitatibus impedit officiis accusantium, iusto rerum, consequuntur nobis excepturi perferendis cupiditate asperiores iste mollitia repellendus. Consequatur, mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem officiis a ipsa, hic, minus, officia eligendi aspernatur voluptates corporis sed fuga sit doloremque nihil consequuntur? Reiciendis animi consectetur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, adipisci voluptatum, ullam, odit velit tenetur quas deserunt laboriosam labore corrupti dignissimos officiis natus? Quas incidunt itaque iusto deserunt fugit placeat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ullam necessitatibus consectetur, dicta blanditiis earum ut assumenda aut. Labore aliquid delectus dolor laborum quae velit temporibus iste alias vel ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cupiditate doloremque magni laboriosam, harum maxime et nulla voluptatem? Rerum, corrupti velit laudantium quidem fugit omnis ratione tempora corporis repellat cum.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor qui ad necessitatibus illo distinctio illum recusandae placeat iste est provident dolorum neque nihil doloribus earum, expedita incidunt temporibus similique quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea. Dolore eos ullam necessitatibus impedit officiis accusantium, iusto rerum, consequuntur nobis excepturi perferendis cupiditate asperiores iste mollitia repellendus. Consequatur, mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem officiis a ipsa, hic, minus, officia eligendi aspernatur voluptates corporis sed fuga sit doloremque nihil consequuntur? Reiciendis animi consectetur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, adipisci voluptatum, ullam, odit velit tenetur quas deserunt laboriosam labore corrupti dignissimos officiis natus? Quas incidunt itaque iusto deserunt fugit placeat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ullam necessitatibus consectetur, dicta blanditiis earum ut assumenda aut. Labore aliquid delectus dolor laborum quae velit temporibus iste alias vel ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cupiditate doloremque magni laboriosam, harum maxime et nulla voluptatem? Rerum, corrupti velit laudantium quidem fugit omnis ratione tempora corporis repellat cum.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor qui ad necessitatibus illo distinctio illum recusandae placeat iste est provident dolorum neque nihil doloribus earum, expedita incidunt temporibus similique quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea. Dolore eos ullam necessitatibus impedit officiis accusantium, iusto rerum, consequuntur nobis excepturi perferendis cupiditate asperiores iste mollitia repellendus. Consequatur, mollitia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem officiis a ipsa, hic, minus, officia eligendi aspernatur voluptates corporis sed fuga sit doloremque nihil consequuntur? Reiciendis animi consectetur qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, adipisci voluptatum, ullam, odit velit tenetur quas deserunt laboriosam labore corrupti dignissimos officiis natus? Quas incidunt itaque iusto deserunt fugit placeat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae ullam necessitatibus consectetur, dicta blanditiis earum ut assumenda aut. Labore aliquid delectus dolor laborum quae velit temporibus iste alias vel ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum cupiditate doloremque magni laboriosam, harum maxime et nulla voluptatem? Rerum, corrupti velit laudantium quidem fugit omnis ratione tempora corporis repellat cum.</p>
     </main>
 </body>
 </html>
