--- a/Exercícios/Ex.024/iframe003.html
+++ b/Exercícios/Ex.024/iframe003.html
@@ -29,7 +29,7 @@
 
     Laudantium ex eligendi quae nulla repellendus ipsam cumque iste? Culpa, quis perferendis itaque totam, corrupti quod eligendi nostrum, error vitae corporis delectus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam perferendis architecto dolor quaerat rem quis qui aspernatur exercitationem, reiciendis ipsam nam totam nemo explicabo voluptatibus sint, veniam saepe id ratione?</p>
 
-    <iframe id="tela" src="" frameborder="0" name="frame"></iframe>
+    <iframe id="tela" srcdoc="<h1>Escolha uma das opções acima</h1>" frameborder="0" name="frame"></iframe>
 
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea similique ex eos odio quasi est veniam magnam cum deleniti, explicabo blanditiis accusantium incidunt excepturi et! Eos corporis culpa blanditiis cum.</p>
