--- a/Exercícios/ex.026/mq001/index.html
+++ b/Exercícios/ex.026/mq001/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Querry</title>
+    <!--Chamadas de Media Querry
+    
+    Media Querry = media type + media feature-->
     <link rel="stylesheet" href="estilo/tela.css" media="screen">
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
